[gd_scene load_steps=7 format=3 uid="uid://h5gbo8gserqh"]

[ext_resource type="Script" uid="uid://baal4ehovd7rm" path="res://Scripts/shield_block.gd" id="1_rh6uw"]
[ext_resource type="Script" uid="uid://dk8n1056prd3d" path="res://Scripts/shield_mouse_detect.gd" id="2_f05rc"]
[ext_resource type="Texture2D" uid="uid://cpkiihtxdi1w4" path="res://Assets/icon.svg" id="2_rh6uw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f05rc"]
size = Vector2(124, 121)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_45o5a"]
size = Vector2(130, 121)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rh6uw"]
size = Vector2(132, 129)

[node name="Shield_block" type="RigidBody2D" groups=["shield"]]
script = ExtResource("1_rh6uw")

[node name="ShieldMouseDetect" type="Area2D" parent="."]
script = ExtResource("2_f05rc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShieldMouseDetect"]
position = Vector2(1, -1.5)
shape = SubResource("RectangleShape2D_f05rc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_45o5a")

[node name="Sheild" type="Sprite2D" parent="."]
texture = ExtResource("2_rh6uw")

[node name="shield_killer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shield_killer"]
position = Vector2(-1, -0.5)
shape = SubResource("RectangleShape2D_rh6uw")

[connection signal="mouse_entered" from="ShieldMouseDetect" to="ShieldMouseDetect" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ShieldMouseDetect" to="ShieldMouseDetect" method="_on_mouse_exited"]
[connection signal="area_entered" from="shield_killer" to="." method="_on_shield_killer_area_entered"]
[connection signal="body_entered" from="shield_killer" to="." method="_on_shield_killer_body_entered"]
